# social_nav2

./: README.md
doc/: README_es.md
social_nav2_bringup/: CMakeLists.txt  package.xml
social_nav2_bringup/behavior_trees/: follow_point_old.xml
social_nav2_bringup/launch/: demo_launch.py  social_nav_launch.py  tb3_house_simulation_launch.py
social_nav2_bringup/maps/: turtlebot3_house.pgm  turtlebot3_house.yaml
social_nav2_bringup/params/: nav2_dwb_params.yaml  nav2_params.yaml  nav2_params_lu_proxemics.yaml
social_nav2_bringup/worlds/models/social_nav2_house/: model.config
social_nav2_goal_updaters/: CMakeLists.txt  README.md  package.xml
social_nav2_goal_updaters/include/social_nav2_goal_updaters/: social_goal_updater.hpp
social_nav2_goal_updaters/launch/: social_goal_updaters_launch.py
social_nav2_goal_updaters/src/: escort_goal_updater.cpp  follow_goal_updater.cpp  hri_goal_updater.cpp  social_goal_updater.cpp
social_nav2_msgs/: CMakeLists.txt  package.xml
social_nav2_plugins/: CMakeLists.txt  costmap_plugins.xml  package.xml
social_nav2_plugins/include/social_nav2_plugins/: people_filter_layer.hpp  social_layer.hpp
social_nav2_plugins/include/social_navigation_plugins/geometry/: geometry.hpp
social_nav2_plugins/plugins/: people_filter_layer.cpp  social_layer.cpp
social_nav2_plugins/src/geometry/: geometry.cpp
social_nav2_tooling/: CMakeLists.txt  package.xml
social_nav2_tooling/src/: dummy_set_agent_action.cpp
social_navigation_actions/: CMakeLists.txt  package.xml
social_navigation_actions/launch/: social_nav_actions.py
social_navigation_actions/pddl/: escort.pddl
social_navigation_actions/src/: escort_action_node.cpp  escort_controller_node.cpp  follow_action_node.cpp
social_navigation_bringup/: CMakeLists.txt  package.xml
social_navigation_bringup/behavior_trees/: follow_point.xml  navigate_w_replanning_and_recovery.xml
social_navigation_bringup/launch/: demo_launch.py  social_nav_launch.py  tb3_house_simulation_launch.py
social_navigation_bringup/maps/: turtlebot3_house.pgm  turtlebot3_house.yaml  turtlebot3_house_2.yaml
social_navigation_bringup/params/: nav2_dwb_params.yaml  nav2_params.yaml  nav2_params_lu_proxemics.yaml
social_navigation_bringup/rviz/: nav2_default_view.rviz
social_navigation_bringup/worlds/: waffle_house.model
social_navigation_bringup/worlds/model/social_nav2_house/: model.sdf  model_default.sdf
social_navigation_bt/: CMakeLists.txt  package.xml
social_navigation_bt/behavior_trees/: navigate_w_replanning_and_recovery.xml
social_navigation_bt/plugins/action/: update_goal_to_follow_action.cpp
social_navigation_msgs/: CMakeLists.txt  package.xml
social_navigation_msgs/msg/: SetHumanAction.msg
social_navigation_plugins/: CMakeLists.txt  costmap_plugins.xml  package.xml
social_navigation_plugins/include/social_navigation_plugins/: people_filter_layer.hpp  social_layer.hpp
social_navigation_plugins/include/social_navigation_plugins/geometry/: geometry.hpp
social_navigation_plugins/plugins/: people_filter_layer.cpp  social_layer.cpp
social_navigation_plugins/src/geometry/: geometry.cpp
social_navigation_tooling/: CMakeLists.txt  package.xml
social_navigation_tooling/src/: dummy_set_agent_action.cpp
