<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>social_navigation_tooling</name>
  <version>0.0.1</version>
  
  <description>Social navigation tools for demo</description>

  <maintainer email="jonatan.gines@urjc.es">jginesclavero</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pedsim_msgs</depend>
  <depend>social_navigation_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
